Restrict disk space taken by container logs
See: https://stackoverflow.com/questions/31829587/docker-container-logs-taking-all-my-disk-space

Signed-off-by: Kostas Christidis <kostas@christidis.io>

--- a/fixtures/docker-compose.yaml
+++ b/fixtures/docker-compose.yaml
@@ -25,6 +25,9 @@ services:
       - ../volumes/orderer:/var/hyperledger/production/orderer
     ports:
       - 7050:7050
+    logging:
+      options:
+        max-size: 100m
 
   peer0.clark.example.com:
     container_name: peer0.clark.example.com
@@ -56,6 +59,9 @@ services:
     ports:
       - 7051:7051
       - 7053:7053
+    logging:
+      options:
+        max-size: 100m
     depends_on:
       - joe.example.com
     links:
